# Slate

./: meson.build  resources.qrc
.cache/clangd/index/: animation.cpp.5E3776347C62037F.idx  animation.hpp.73C6195F723A7745.idx  app.cpp.90D874FE8685C854.idx  app.h.9F7A1ECB906B3336.idx  automerge.cpp.532F92050DF1C5BB.idx  autoreset.hpp.51C59012F74929D4.idx  blink.cpp.3CE2465290F08A7A.idx  bold.cpp.C3C64EFA7263BFEA.idx  border.cpp.962FA6B548C40441.idx  box.cpp.ECF0BAC79AF0C3B4.idx  box.hpp.B5E3274852FAC4FE.idx  box_helper.cpp.B31D5CD24757B91D.idx  box_helper.hpp.6E3DDE126F0862D2.idx  buffer.cpp.83E57051B5EB112A.idx  buffer.h.40C78A41A309F223.idx  button.cpp.25589958DDF38DF2.idx  canvas.cpp.9923E996EB2524BD.idx  canvas.hpp.CC6DE25960808806.idx  captured_mouse.hpp.184FA45C092EF71F.idx  catch_event.cpp.DF448AF5F830D2EE.idx  checkbox.cpp.6F27B8E7A238C8E0.idx  clear_under.cpp.CD9B3DF7F13E1C18.idx  collapsible.cpp.CF9139D43D587E53.idx  color.cpp.5284E0749CEE9410.idx  color.cpp.8654F0E7D93F140D.idx  color.hpp.62157B8DE643D1D8.idx  color_info.cpp.18754E8998CC475E.idx  color_info.hpp.0CFAC0B4B0057315.idx  component.cpp.4117A20FFB504AB2.idx  component.hpp.E1271BFBCF58B5BA.idx  component_base.hpp.2C48F63E2F7E3929.idx  component_options.cpp.A62B1ECAC8261534.idx  component_options.hpp.D51A2EE71BA3B561.idx  composite_decorator.cpp.8A3C6690AA9941FF.idx  container.cpp.7ECD316497AABA9C.idx  dbox.cpp.C2AD38437E00E036.idx  deprecated.hpp.569DA4B0C40A4DDF.idx  deprecated.hpp.C5C52C666AA6C0E6.idx  dim.cpp.4BEB07498A760349.idx  direction.hpp.8B4FFDBAAF2A29F4.idx  (+107 more)
include/: app.h  buffer.h  screen_manager.h  scripting.h
qml/: CommandPalette.qml  EditorArea.qml  FileExplorer.qml  HomeScreen.qml  SettingsPanel.qml  StatusBar.qml  ToastManager.qml  WelcomeScreen.qml
src/: app.cpp  buffer.cpp  dialoghelper.h  editorbuffer.h  filesystemmodel.h  lspclient.h  main.cpp  projectmanager.h  screen_manager.cpp  scripting.cpp  settingsmanager.h  syntaxhighlighter.cpp  syntaxhighlighter.h  thememanager.h
src/ai/: claude_client.cpp  claude_client.h
src/debug/: gdb_client.cpp  gdb_client.h
src/editor/: editor.cpp  editor.h
src/imgui/: imconfig.h
src/lsp/: lsp_client.cpp  lsp_client.h
src/sokol/: README  sokol_imgui.h  sokol_impl.cpp
src/stb/: README
src/theme/: theme.cpp  theme.h
src/ui/: homepage.cpp  homepage.h  settings.cpp  settings.h  slate_ui.cpp  slate_ui.h  ui.cpp  ui.h
